readability, map scroll fixing and homepage trigger on load

--- a/css/pages.css
+++ b/css/pages.css
@@ -1,3 +1,20 @@
+
+/*INDEX
+base
+nav
+main content
+initial display
+flex slider
+forms
+ALUMNI PAGE
+FOOTER-
+about
+preload
+animations
+top images
+misc
+nav control members page
+*/
 html{
 	font-size: 10px;
 }
@@ -86,26 +103,6 @@ nav{
 
 .tab-content{
 	background:transparent!important;
-}
-/*-----------cover-------------*/
-.cover{
-	margin-left: 0%;
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 301px;
-	background-color:transparent;
-	background-image: url('../images/sae-cover.jpg');
-	background-size: contain;
-	border-image-repeat: no-repeat;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-.blur{
-	display: block;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),url('../images/blur.jpg');
-	background-size: contain;
-	height:301px;
 }
 
 
@@ -259,27 +256,7 @@ iframe.members{
 	width: 100%;
 	padding-right: 2%;
 }
-#map{
-	display: inline-block;
-	width: 500px;
-	height: 300px;
-	cursor: pointer;
-	pointer-events: none;
-}
-#map .clicked{
-	pointer-events: auto;
-}
-.about-us{
-	display: inline-block;
-	width: 30%;
-	height:200px;
-	border:10px solid black;
-	margin-top: 0px;
-	position: absolute;
-	padding:2%; 
-	color: white;
-	text-align: center;
-}
+
 
 .photos{
 
@@ -296,14 +273,34 @@ iframe.members{
 .logo2{
 	margin-top: 50vh;
 }
+#map{
+	display: inline-block;
+	width: 500px;
+	height: 300px;
+	cursor: pointer;
+	
+}
+.clicked{
+	pointer-events:none;
+}
+.about-us{
+	display: inline-block;
+	width: 30%;
+	height:200px;
+	border:10px solid black;
+	margin-top: 0px;
+	position: absolute;
+	padding:2%; 
+	color: white;
+	text-align: center;
+}
 /*----------------about-------------------*/
 p{
 	font-size: 2rem !important;
 	text-align: left;	
 	font-family: 'Boogaloo', cursive;
 }
-/*preload
- * ------------------------------------------------------------------- */
+/*----------------------------------------------------- preload ---------------- */
 #_preloader {
 	position:fixed;
 	top: 0;
@@ -445,7 +442,7 @@ p{
 	position: absolute;
 	font-family: 'Ruslan Display', cursive;
 }
-
+/*----------nav control members page----------------*/
 .navarrow{
 	font-size: 30px;
 	display: block;
